Changed placeholder text to refer to QR code

--- a/templates/vue-stores.html
+++ b/templates/vue-stores.html
@@ -39,7 +39,7 @@
                         <div class="field">
                             <label>Barcode</label>
                             <div class="control">
-                                <input ref="barcode" type="text" class="input" v-model="barcode" v-on:keydown.enter="onBarcodeEnter" placeholder="Scan the long barcode from the dewar case">        
+                                <input ref="barcode" type="text" class="input" v-model="barcode" v-on:keydown.enter="onBarcodeEnter" placeholder="Scan the QR code / barcode from the dewar case">
                             </div>
                         </div>
 
